# Grapher

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  a.out  compile_commands.json
.cache/clangd/index/: alloc.h.72E036A4EF1B834A.idx  dfs.c.8A5A57C01F94C923.idx  event.h.5F2E8F02B7A359BB.idx  graph.c.4D6AC9A2E4E471B6.idx  graph.c.C1238CF82E758213.idx  graph.h.C8183E8578AF178F.idx  graph.h.CC167E818BA29603.idx  graphvis.c.8EEFB95DAD4EEAC1.idx  graphvis.h.E63FE72123C92067.idx  gvizArray.c.8FFD51CE22657AC0.idx  gvizArray.h.DEB9916A5A955E54.idx  gvizArrayTests.c.F0930BA3B91E9DB4.idx  gvizBitArray.h.E3DB8A938D26063C.idx  gvizBitArrayTests.c.3155265BD07F73F4.idx  gvizEmbeddedGraph.c.8C4C788EA39D11D5.idx  gvizEmbeddedGraph.h.57AC84469E3FACAB.idx  gvizEmbeddedTree.c.1CEBE9BDFF0D077F.idx  gvizEmbeddedTree.h.A7DC7D9284E05FCE.idx  gvizGraph.c.EE907692888AE9CA.idx  gvizGraph.h.DFD455D2E3B7C8F2.idx  gvizGraphTests.c.D29F94A7547BF032.idx  gvizLayer.c.BD48D5AB518D0B5F.idx  gvizLayer.h.80FFF54A8302224A.idx  gvizLayerGraph.c.9B553965E3BBB24E.idx  gvizLayerGraph.h.7E2A0439B31D5F92.idx  gvizTree.c.00D462C9E3F68040.idx  gvizTree.h.5A3E88ED2D253FDA.idx  helpers.c.FC6BDE399F637A51.idx  helpers.h.D947970AAA5C3277.idx  memtrack.c.BDF1F6A0BE18FECC.idx  memtrack.h.C377B7D196567477.idx  object.h.EB87A72163B65505.idx  serializers.c.79A6C8F6BDF9E615.idx  serializers.h.3153FC40BF6219E1.idx  stack.c.E68C1AAB94F645E1.idx  uLongArray.c.9660CEFF86EE87F5.idx  uLongArray.h.8630FBA06356D7CF.idx  unity.c.8291575787D4C6D6.idx  unity.h.3C278235142B6A90.idx  unity_internals.h.7E5B202EF781979B.idx
.claude/: TASKS.md
.claude/agents/: epic-adventurer.md
build-asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-asan/Testing/Temporary/: CTestCostData.txt
build-asan/tests/core/: gvizThreadPoolTests  gvizVecTests
build-asan/tests/ds/: gvizArrayTests  gvizBitArrayTests  gvizDequeTests  gvizGraphTests  gvizQuadtreeTests  gvizSubgraphTests  gvizTreeTests
build-asan/tests/embedders/: gvizEmbeddedGraphTests  gvizEmbeddedTreeTests  gvizForceEmbedderTests  gvizGRIPFiltrationDebug  gvizGRIPKBench  gvizGRIPLayerProbe  gvizGRIPMigrateBench  gvizGRIPPlaceBench  gvizGRIPTests  gvizPlanarTests  gvizSpringTutteTests  gvizTuttePickTests  gvizTutteTests
build-asan/tests/utils/: gvizGraphLoaderTests  gvizGraphsTests
include/: graph.h  graphvis.h  gviz.h  helpers.h  stack.h
include/algorithms/search/: gvizBreadthFirst.h  gvizConnectedComponents.h  (+2 more)
include/app/: gvizContextMenu.h  gvizDemoGraphLoad.h  gvizGraphCreatePanel.h  gvizLayerCreate.h  gvizLayerCreatePanel.h  gvizLayerGRIP.h  gvizLayerGRIPLive.h  gvizLayerGraphTree.h  gvizLayerOBJ.h  gvizLayerPolyTutte.h  gvizLayerTutte.h  gvizOBJLoadModal.h  gvizSceneBuilders.h
include/core/: alloc.h  event.h  gvizCamera.h  gvizGraphEvent.h  gvizScene.h  gvizThreadPool.h  gvizVec.h  object.h
include/ds/: gvizArray.h  gvizBitArray.h  gvizDeque.h  gvizGraph.h  gvizQuadtree.h  gvizSubgraph.h  gvizTree.h
include/dsa/: graph.h  gvizArray.h  gvizBitArray.h  gvizDeque.h  gvizGraph.h  gvizGraphView.h  gvizSubgraph.h  gvizTree.h  uLongArray.h
include/embedders/: gvizEmbeddedGraph.h  gvizEmbeddedTree.h  gvizFRPairwiseEmbedder.h  gvizForceDirected.h  gvizForceEmbedder.h  gvizForceModel.h  gvizGRIPEmbedder.h  gvizPlanarEmbedder.h  gvizSchnyderWood.h  gvizSpringTutteEmbedder.h  gvizTutteEmbedder.h
include/leiden/: leiden.h
include/platform/: macos_menu.h
include/renderer/: gvizRenderer.h
include/utils/: graphLoader.h  graphs.h  gvizOBJLoader.h  gvizPCA.h  gvizTreeIO.h  helpers.h  serializers.h
projects/WikiNotes/: CMakeLists.txt  README.md  a.out  main.c
projects/WikiNotes/.cache/clangd/index/: helpers.c.CE83807BDC2914B1.idx  helpers.h.F19B50A9EA6A748A.idx  main.c.EF3F0B4DFDD7DC32.idx  parser.c.4DA70028B746D22C.idx  parser.h.B3BE0548B2412B2E.idx
projects/WikiNotes/assets/: 24cell.txt
projects/WikiNotes/include/: helpers.h  parser.h
projects/WikiNotes/src/: helpers.c  parser.c
src/: graph.c  graphvis.c  helpers.c  stack.c
src/app/: gvizContextMenu.c  gvizDemoGraphLoad.c  gvizGraphCreatePanel.c  gvizLayerCreate.c  gvizLayerCreatePanel.c  gvizLayerGRIP.c  gvizLayerGRIPLive.c  gvizLayerGraphTree.c  gvizLayerOBJ.c  gvizLayerPolyTutte.c  gvizLayerTutte.c  gvizOBJLoadModal.c  gvizSceneBuilders.c  main.c
src/core/: gvizCamera.c  gvizScene.c  gvizThreadPool.c
src/ds/: gvizArray.c  gvizBitArray.c  gvizDeque.c  gvizGraph.c  gvizQuadtree.c  gvizSubgraph.c  gvizTree.c
src/dsa/: graph.c  gvizArray.c  gvizBitArray.c  gvizDeque.c  gvizGraph.c  gvizGraphView.c  gvizSubgraph.c  gvizTree.c  uLongArray.c
src/embedders/: gvizEmbeddedGraph.c  gvizEmbeddedTree.c  gvizFRPairwiseEmbedder.c  gvizForceDirected.c  gvizForceEmbedder.c  gvizForceModel.c  gvizGRIPEmbedder.c  gvizGRIPInternal.h  gvizPlanarEmbedder.c  gvizSchnyderWood.c  gvizSpringTutteEmbedder.c  gvizTutteEmbedder.c
src/platform/: macos_menu.m
src/renderer/: gvizRenderer.c
src/utils/: graphLoader.c  graphs.c  gvizOBJLoader.c  gvizPCA.c  gvizTreeIO.c  helpers.c  serializers.c
tests/: a.out  dfs.c
tests/core/: gvizThreadPoolTests.c  gvizVecTests.c
tests/data/: attrs.gexf  attrs_legacy.gexf  directed.edges  empty_nodes.gexf  gapped.edges  malformed.edges  sample.edges  tiny.gexf
tests/ds/: gvizArrayTests.c  gvizBitArrayTests.c  gvizDequeTests.c  gvizGraphTests.c  gvizQuadtreeTests.c  gvizSubgraphTests.c  gvizTreeTests.c
tests/dsa/: graphTests.c  gvizArrayTests.c  gvizBitArrayTests.c  gvizDequeTests.c  gvizGraphTests.c  gvizGraphViewTests.c  gvizSubgraphTests.c  ulArrayTests.c
tests/embedders/: gvizEmbeddedGraphTests.c  gvizEmbeddedTreeTests.c  gvizFRPairwiseTests.c  gvizForceEmbedderTests.c  gvizGRIPEmbedderInternal.h  gvizGRIPFiltrationDebug.c  gvizGRIPKBench.c  gvizGRIPLayerProbe.c  gvizGRIPMigrateBench.c  gvizGRIPPlaceBench.c  gvizGRIPTests.c  gvizPlanarTests.c  gvizSpringTutteTests.c  gvizTuttePickTests.c  gvizTutteTests.c
tests/renderer/: gripDemo.c  polytutteDemo.c  treeDemo.c  tutteDemo.c
tests/utils/: gvizGraphLoaderTests.c  gvizGraphsTests.c
(+39 files in other folders)
